@@ -14,5 +14,5 @@ Synopsis
 Returns
 -------
 
-The ``bson_context_get_default()`` function shall return the default, thread-safe, :symbol:`bson_context_t` for the process.
-
+The ``bson_context_get_default()`` function shall return the default :symbol:`bson_context_t` for the process.
+This context is created with the flags ``BSON_CONTEXT_THREAD_SAFE`` and ``BSON_CONTEXT_DISABLE_PID_CACHE``.
