@@ -16,9 +16,13 @@ Parameters
 
 * ``flags``: A :symbol:`bson_context_flags_t <bson_context_t>`.
 
-``flags`` can be one of the following:
+The following ``flags`` may be used:
 * ``BSON_CONTEXT_NONE`` meaning creating ObjectIDs with this context is not a thread-safe operation.
 * ``BSON_CONTEXT_THREAD_SAFE`` meaning creating ObjectIDs with this context is a thread-safe operation.
+* ``BSON_CONTEXT_DISABLE_PID_CACHE`` meaning creating ObjectIDs will also check if the process has
+changed by calling ``getpid()`` on every ObjectID generation.
+
+To use multiple flags, xor them together.
 
 Description
 -----------
