@@ -34,9 +34,13 @@ struct _bson_context_t {
    int32_t seq32;
    int64_t seq64;
    uint8_t rand[5];
+   uint16_t pid;
 
    void (*oid_set_seq32) (bson_context_t *context, bson_oid_t *oid);
    void (*oid_set_seq64) (bson_context_t *context, bson_oid_t *oid);
+
+   /* this function pointer allows us to mock gethostname for testing. */
+   void (*gethostname) (char *out);
 };
 
 void
