@@ -1,3 +1,15 @@
+Next
+====
+
+Features:
+
+  * ObjectIDs are generated in compliance with the driver ObjectID spec.
+
+Bug fixes:
+
+  *
+
+
 libbson 1.13.0
 ==============
 
